# point-and-surface-registration

./: README.md
doc/html/: _8ycm__extra__conf_8py.html  annotated.html  annotated.js  catch_8hpp.html  catch_8hpp.js  catch_8hpp_source.html  class_algorithm_failed-members.html  class_algorithm_failed.html  class_catch_1_1_assertion_result-members.html  class_catch_1_1_assertion_result.html  class_catch_1_1_between_generator-members.html  class_catch_1_1_between_generator.html  class_catch_1_1_composite_generator-members.html  class_catch_1_1_composite_generator.html  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expression_lhs-members.html  class_catch_1_1_expression_lhs.html  class_catch_1_1_internal_1_1_evaluator.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_all_of-members.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_all_of.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_any_of-members.html  class_catch_1_1_matchers_1_1_impl_1_1_generic_1_1_any_of.html  class_catch_1_1_method_test_case-members.html  class_catch_1_1_method_test_case.html  class_catch_1_1_non_copyable-members.html  class_catch_1_1_non_copyable.html  class_catch_1_1_not_implemented_exception-members.html  class_catch_1_1_not_implemented_exception.html  (+285 more)
research-computing-with-cpp-demo/Code/PointBasedRegistration/: CMakeLists.txt  commandlineoptions.cpp  exception.h  filereader.h  filereader.tpp  filewriter.h  main.cpp  pointbasedregistration.h  pointbasedregistration.tpp  pointcloud.h  testing.cpp
research-computing-with-cpp-demo/Code/SurfaceBasedRegistration/: CMakeLists.txt  commandlineoptions.h  filereader.h  filereader.tpp  filewriter.tpp  main.cpp  pointbasedregistration.tpp  pointxyz.h  surfacebasedregistration.h  surfacebasedregistration.tpp  testingsbr.cpp
(+66 files in other folders)
